feat(api): swagger ui at /docs
